--- a/web/index.html
+++ b/web/index.html
@@ -20,13 +20,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="basic_app_">
+  <meta name="apple-mobile-web-app-title" content="designcode">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>basic_app_</title>
+  <title>designcode</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
